<resources xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <string name="app_name">drivemodedemo</string>
        <string name="system_ui_date_pattern">M月d日 EEE</string>
        <string name="status_bar_settings_wlan">"无线网络"</string>
        <string name="status_bar_settings_vpn">"VPN"</string>
        <string name="status_bar_settings_autobrightness">"自动亮度"</string>
        <string name="status_bar_settings_nfc">"NFC"</string>
        <string name="status_bar_settings_smarttouch">"悬浮球"</string>
        <string name="status_bar_settings_dndmode">"免打扰"</string>
        <string name="status_bar_settings_mute">"静音"</string>
        <string name="status_bar_settings_vibrate">"振动"</string>
        <string name="status_bar_settings_powersave">"省电"</string>
        <string name="status_bar_settings_rotation">"屏幕旋转"</string>
        <string name="status_bar_settings_mobile">"移动数据"</string>
        <string name="status_bar_settings_screenshot">"截图"</string>
        <string name="status_bar_settings_datasave">"流量节省"</string>
        <string name="status_bar_settings_hotspot">"移动热点"</string>
        <string name="status_bar_settings_drivemode">"驾驶辅助"</string>
        <string name="status_bar_settings_eyeprotective">"护眼模式"</string>
        <string name="status_bar_settings_accelerator">"手机加速"</string>
        <string name="status_bar_settings_screenrecord">"录屏"</string>
        <string name="status_bar_settings_developeroptions">开发者选项</string>
        <string name="status_bar_settings_airplane">"飞行模式"</string>
        <string name="quick_settings_connecting_label">"连接中..."</string>
        <string name="quick_settings_bluetooth_devices_label">蓝牙 <xliff:g id="NUMBER">%d</xliff:g></string>
        <string name="qs_tiles_edit_tips_text">拖动开关到上方以显示</string>
        <string name="qs_tile_config_title">快捷开关管理</string>
        <string name="qs_tile_config_cue_line_text">长按拖动到上方以显示</string>
        <string name="mobile_data_disabled_message">"移动数据未就绪，请稍后再试"</string>
        <string name="flash_light_disabled">"请先关闭相机或手电筒程序"</string>
        <string name="tile_powersave_standard">"智能省电"</string>
        <string name="tile_powersave_user_defined">"自定义省电"</string>
        <string name="tile_powersave_super">"极限省电"</string>
        <string name="tile_mobiledata_2g_only">"仅 2G"</string>
        <string name="tile_mobiledata_3g_first">"优先 3G"</string>
        <string name="tile_mobiledata_3g_only">"仅 3G"</string>
        <string name="tile_mobiledata_4g_first">"优先 4G"</string>
        <string name="carrier_no_sim">无SIM卡</string>
        <string name="demo_device">"体验机"</string>
        <string name="carrier_airplane_mode">飞行模式</string>
        <string name="tile_bluetooth_detail_empty_text">"未在附近找到蓝牙设备"</string>
        <string name="wifi_password">"密码"</string>
        <string name="wifi_connect">"连接"</string>
        <string name="WidgetLayoutExtend_Description_smarttouch">悬浮球</string>
        <string name="smarttouch_help_title">悬浮球功能介绍</string>
        <string name="smarttouch_help_button_close">关闭</string>
        <string name="smarttouch_help_button_modify">自定义</string>
        <string name="smarttouch_help_button_title_1">单击</string>
        <string name="smarttouch_help_button_summary_1">返回上一级</string>
        <string name="smarttouch_help_button_title_2">双击</string>
        <string name="smarttouch_help_button_summary_2">全屏下拉悬停</string>
        <string name="smarttouch_help_button_title_3">长按</string>
        <string name="smarttouch_help_button_summary_3">移动位置</string>
        <string name="smarttouch_help_button_title_4">上滑</string>
        <string name="smarttouch_help_button_summary_4">返回桌面</string>
        <string name="smarttouch_help_button_title_5">下滑</string>
        <string name="smarttouch_help_button_summary_5">展开通知栏</string>
        <string name="smarttouch_help_button_title_6">左右滑动</string>
        <string name="smarttouch_help_button_summary_6">切换多任务</string>
        <string name="smarttouch_help_button_summary_lock_screen">锁定屏幕</string>
        <string name="multi_choose_app">选择分屏应用</string>
        <string name="multi_activity_lable">分屏</string>
        <string name="recents_close_all_title">全部关闭</string>
        <string name="recents_close_all_mem">释放内存 %1$dMB</string>
        <string name="recents_close_all_mem_nothing">内存已优化至最佳</string>
        <string name="recents_start_multi">分屏</string>
        <string name="recents_extend_lock">锁定</string>
        <string name="recents_extend_secret">模糊</string>
        <string name="recents_extend_multi">分屏</string>
        <string name="recents_extend_pin">固定</string>
        <string name="recents_mem">"内存 "</string>
        <string name="keyguard_camera_hint">"上滑进入相机"</string>
        <string name="fake_notification_tip">"收到<xliff:g id="NUMBER">%1$d</xliff:g>条新消息"</string>
        <string name="fake_notification_tips">"收到<xliff:g id="NUMBER">%1$d</xliff:g>条新消息"</string>
        <string name="qs_header_date_main_pattern12">%s EEE a</string>
        <string name="qs_header_date_main_pattern24">%s EEE</string>
        <string name="qs_header_date_local_pattern">MMMd</string>
        <string name="nxp_memory_clean">释放了%1$dM内存</string>
        <string name="nxp_memory_clean_nothing">已优化至最佳状态</string>
        <string name="notification_reply">回复</string>
        <string name="allow_notification">允许通知</string>
        <string name="not_remind">显示通知，但不提醒</string>
        <string name="no_display_notification">不允许通知</string>
        <string name="priority_display">优先显示</string>
        <string name="intercepted_notification">不重要通知</string>
        <string name="filter_notification_tips">不重要通知会收纳于此</string>
        <string name="filter_notification_manage">管理</string>
        <string name="filter_notification_clear">清空</string>
        <string name="screenshot_share_lable">分享</string>
        <string name="screenshot_share_delete_after_share">分享后删除截图</string>
        <string name="hello_for_vice_screen">你好!</string>
        <string name="free_wifi_label">认证</string>
        <string name="dialog_close">关闭</string>
        <string name="keyguard_demo_lock_hint">手指放在主键上解锁</string>
        <string name="app_label" msgid="7164937344850004466">"系统界面"</string>
        <string name="status_bar_clear_all_button" msgid="7774721344716731603">"清除"</string>
        <string name="status_bar_recent_remove_item_title" msgid="6026395868129852968">"从列表中删除"</string>
        <string name="status_bar_recent_inspect_item_title" msgid="7793624864528818569">"应用信息"</string>
        <string name="status_bar_no_recent_apps" msgid="7374907845131203189">"您最近浏览过的屏幕会显示在此处"</string>
        <string name="status_bar_accessibility_dismiss_recents" msgid="4576076075226540105">"关闭最近运行的应用"</string>
        <plurals name="status_bar_accessibility_recent_apps" formatted="false" msgid="9138535907802238759">
                <item quantity="other">概览中有 %d 个屏幕</item>
                <item quantity="one">概览中有 1 个屏幕</item>
        </plurals>
        <string name="status_bar_no_notifications_title" msgid="4755261167193833213">"无通知"</string>
        <string name="status_bar_ongoing_events_title" msgid="1682504513316879202">"正在进行的"</string>
        <string name="status_bar_latest_events_title" msgid="6594767438577593172">"通知"</string>
        <string name="battery_low_title" msgid="6456385927409742437">"电池电量偏低"</string>
        <string name="battery_low_percent_format" msgid="2900940511201380775">"剩余<xliff:g id="PERCENTAGE">%s</xliff:g>"</string>
        <string name="battery_low_percent_format_saver_started" msgid="6859235584035338833">"剩余<xliff:g id="PERCENTAGE">%s</xliff:g>。省电模式已开启。"</string>
        <string name="invalid_charger" msgid="4549105996740522523">"不支持USB充电功能。\n只能使用随附的充电器充电。"</string>
        <string name="invalid_charger_title" msgid="3515740382572798460">"不支持USB充电。"</string>
        <string name="invalid_charger_text" msgid="5474997287953892710">"仅限使用设备随附的充电器。"</string>
        <string name="battery_low_why" msgid="4553600287639198111">"设置"</string>
        <string name="battery_saver_confirmation_title" msgid="5299585433050361634">"要开启省电模式吗？"</string>
        <string name="battery_saver_confirmation_ok" msgid="7507968430447930257">"开启"</string>
        <string name="battery_saver_start_action" msgid="5576697451677486320">"开启省电模式"</string>
        <string name="status_bar_settings_settings_button" msgid="3023889916699270224">"设置"</string>
        <string name="status_bar_settings_wifi_button" msgid="1733928151698311923">"WLAN"</string>
        <string name="status_bar_settings_auto_rotation" msgid="3790482541357798421">"自动旋转屏幕"</string>
        <string name="status_bar_settings_mute_label" msgid="554682549917429396">"静音"</string>
        <string name="status_bar_settings_auto_brightness_label" msgid="511453614962324674">"自动"</string>
        <string name="status_bar_settings_notifications" msgid="397146176280905137">"通知"</string>
        <string name="bluetooth_tethered" msgid="7094101612161133267">"已通过蓝牙共享网络"</string>
        <string name="status_bar_input_method_settings_configure_input_methods" msgid="3504292471512317827">"设置输入法"</string>
        <string name="status_bar_use_physical_keyboard" msgid="7551903084416057810">"物理键盘"</string>
        <string name="usb_device_permission_prompt" msgid="834698001271562057">"允许应用“<xliff:g id="APPLICATION">%1$s</xliff:g>”访问该USB设备吗？"</string>
        <string name="usb_accessory_permission_prompt" msgid="5171775411178865750">"允许应用“<xliff:g id="APPLICATION">%1$s</xliff:g>”访问该USB配件吗？"</string>
        <string name="usb_device_confirm_prompt" msgid="5161205258635253206">"要在连接此USB设备时打开<xliff:g id="ACTIVITY">%1$s</xliff:g>吗？"</string>
        <string name="usb_accessory_confirm_prompt" msgid="3808984931830229888">"要在连接此USB配件时打开<xliff:g id="ACTIVITY">%1$s</xliff:g>吗？"</string>
        <string name="usb_accessory_uri_prompt" msgid="513450621413733343">"未安装此USB配件适用的应用。要了解此配件的详情，请访问：<xliff:g id="URL">%1$s</xliff:g>"</string>
        <string name="title_usb_accessory" msgid="4966265263465181372">"USB配件"</string>
        <string name="label_view" msgid="6304565553218192990">"查看"</string>
        <string name="always_use_device" msgid="1450287437017315906">"默认情况下用于该USB设备"</string>
        <string name="always_use_accessory" msgid="1210954576979621596">"默认情况下用于该USB配件"</string>
        <string name="usb_debugging_title" msgid="4513918393387141949">"允许USB调试吗？"</string>
        <string name="usb_debugging_message" msgid="2220143855912376496">"这台计算机的 RSA 密钥指纹如下：\n<xliff:g id="FINGERPRINT">%1$s</xliff:g>"</string>
        <string name="usb_debugging_always" msgid="303335496705863070">"一律允许使用这台计算机进行调试"</string>
        <string name="usb_debugging_secondary_user_title" msgid="6353808721761220421">"不允许使用 USB 调试功能"</string>
        <string name="settings_drivemode">驾驶模式</string>
        <string name="settings_bluetooth_start">连接车载蓝牙时启动</string>
        <string name="settings_drivemode_devices">车载蓝牙设备</string>
        <string name="settings_drivemode_no_devices">没有蓝牙设置</string>
        <string name="settings_car_auto_play_music">自动播放音乐</string>
        <string name="settings_car_auto_play_music_tips">驾驶模式后自动播放音乐</string>
        <string name="settings_home">家</string>
        <string name="settings_home_tips">暂未设置</string>
        <string name="settings_company">公司</string>
        <string name="settings_company_tips">暂未设置</string>
        <string name="settings_exit_drivemode">退出驾驶模式</string>
        <string name="optimized_scene">优化场景</string>
        <string name="optimized_scene_details">优化驾驶场景下的导航，来电等功能</string>
        <string name="customized">定制</string>
        <string name="customized_details">可以选择自己喜欢的地图，音乐应用</string>
        <string name="using_voice">车内动口不动手</string>
        <string name="using_voice_details">说指令[Hi,魅族],可语音操作手机</string>
        <string name="next_step">下一步</string>
</resources>